--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CYBO - FocousMinute</title>
-    <link href="https://fonts.cdnfonts.com/css/minecraft-4" rel="stylesheet">
+    <title>Aesthetic Productivity Hub</title>
+    
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/nrOMBEp.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="https://i.imgur.com/nrOMBEp.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="https://i.imgur.com/nrOMBEp.png" />
     <link rel="shortcut icon" href="https://i.imgur.com/nrOMBEp.png" />
+    
+    <link href="https://fonts.cdnfonts.com/css/minecraft-4" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -602,7 +604,7 @@
         .credits-contact {
             font-size: 12px;
             opacity: 0.8;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
 
         .credits-contact a {
@@ -612,6 +614,22 @@
         }
 
         .credits-contact a:hover {
+            opacity: 0.7;
+        }
+
+        .credits-social {
+            font-size: 12px;
+            opacity: 0.8;
+            margin-bottom: 15px;
+        }
+
+        .credits-social a {
+            color: #4ecca3;
+            text-decoration: none;
+            transition: opacity 0.3s ease;
+        }
+
+        .credits-social a:hover {
             opacity: 0.7;
         }
 
@@ -777,6 +795,7 @@
                         <p class="credits-name">Coolest Young Brain Online 🌐🧠</p>
                         <p class="credits-tagline">Crafted in India with ❤️ and a curious mind.</p>
                         <p class="credits-contact">Contact: <a href="mailto:cybo.buisness@gmail.com">cybo.buisness@gmail.com</a></p>
+                        <p class="credits-social">Socials: <a href="https://cybo-94.github.io/og-sites/" target="_blank">cybo-94.github.io/og-sites</a></p>
                         <p class="credits-footer">© 2025 CYBO. All rights reserved.</p>
                     </div>
                 </div>
@@ -793,76 +812,22 @@
     <script>
         // Motivational Quotes
         const quotes = [
-                        "The future depends on what you do today.",
-            "Success is built through small efforts repeated with consistency.",
-            "Don’t watch the clock; stay focused and keep moving forward.",
-            "Great work happens when effort meets purpose.",
-            "Believe in your ability to learn and grow.",
-            "Hard work outlasts talent when talent lacks discipline.",
-            "Your limits exist only where effort stops.",
-            "Growth begins the moment comfort ends.",
-            "Dream it clearly, work for it daily.",
-            "Success is earned through action, not waiting.",
-            "The harder you work, the more meaningful success becomes.",
-            "Think bigger, act stronger, stay consistent.",
-            "Stop only when the task is finished.",
-            "Start your day determined and end it satisfied.",
-            "Do something today your future self will appreciate.",
-            "Small actions create powerful outcomes.",
-            "Consistency turns effort into achievement.",
-            "Focus today shapes tomorrow’s results.",
-            "Progress happens when excuses disappear.",
-            "Effort repeated daily creates momentum.",
-            "Success grows when discipline becomes habit.",
-            "One focused session can change your direction.",
-            "Patience gives effort time to work.",
-            "Every step forward counts.",
-            "Focus on progress, not perfection.",
-            "Daily effort builds long-term success.",
-            "Discipline creates freedom over time.",
-            "Action creates clarity.",
-            "Show up even on difficult days.",
-            "Results follow consistent effort.",
-            "Work quietly and let progress speak.",
-            "Focus is your greatest advantage.",
-            "Success rewards persistence.",
-            "Do the work even when motivation fades.",
-            "Small wins build confidence.",
-            "Time respects consistent effort.",
-            "Progress comes from steady action.",
-            "Stay committed to the process.",
-            "Growth requires patience and effort.",
-            "Your habits shape your future.",
-            "Focus turns intention into results.",
-            "Start now and improve along the way.",
-            "Effort today creates opportunities tomorrow.",
-            "Success is built, not discovered.",
-            "Work with intention and clarity.",
-            "Consistency beats intensity over time.",
-            "Progress favors discipline.",
-            "Every day is a chance to improve.",
-            "Focus on what truly matters.",
-            "Effort compounds when repeated.",
-            "Discipline keeps you moving forward.",
-            "Stay patient and persistent.",
-            "Success is a daily choice.",
-            "Small steps lead to big change.",
-            "Progress begins with action.",
-            "Show up and stay focused.",
-            "Work steadily toward your goals.",
-            "Effort builds strength and confidence.",
-            "Stay consistent to see results.",
-            "Focus fuels progress.",
-            "Action today leads to growth tomorrow.",
-            "Success comes from sustained effort.",
-            "Do the work with purpose.",
-            "Progress grows with consistency.",
-            "Focus creates momentum.",
-            "Discipline shapes outcomes.",
-            "Effort earns results.",
-            "Stay focused and move forward.",
-            "Success favors consistency.",
-            "Progress is earned daily."
+            "The future depends on what you do today.",
+            "Success is the sum of small efforts repeated day in and day out.",
+            "Don't watch the clock; do what it does. Keep going.",
+            "The only way to do great work is to love what you do.",
+            "Believe you can and you're halfway there.",
+            "Hard work beats talent when talent doesn't work hard.",
+            "Your limitation—it's only your imagination.",
+            "Great things never come from comfort zones.",
+            "Dream it. Wish it. Do it.",
+            "Success doesn't just find you. You have to go out and get it.",
+            "The harder you work for something, the greater you'll feel when you achieve it.",
+            "Dream bigger. Do bigger.",
+            "Don't stop when you're tired. Stop when you're done.",
+            "Wake up with determination. Go to bed with satisfaction.",
+            "Do something today that your future self will thank you for.",
+            "Little things make big days."
         ];
 
         // Global Variables
