--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aesthetic Productivity Hub</title>
+    <title>Focus Minute</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/nrOMBEp.png" />
